uploading full working  website

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet" />
     <!-- React bootstrap link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-
+    <script src="https://kit.fontawesome.com/440c4dadc2.js" crossorigin="anonymous"></script>
     <title>Reactifolio Akj</title>
   </head>
   <body>
